tests/machine/x/go/tree_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/tree_sum.go:15:8: undefined: Tree
../../../tests/machine/x/go/tree_sum.go:17:8: undefined: Tree
../../../tests/machine/x/go/tree_sum.go:23:17: undefined: Tree
../../../tests/machine/x/go/tree_sum.go:24:13: cannot convert func() any {…}() (value of interface type any) to type int: need type assertion
../../../tests/machine/x/go/tree_sum.go:42:17: undefined: Tree

1: //go:build ignore
